src/assets/styles/modal.less
.modal {
  overflow-y: scroll;
  .modal-header{ color:#304269;}
  .modal-body{ color:#304269;}

  .modal-dialog .modal-content {
    font-size: 18px;
    font-weight: 300;
  }

  .modal-dialog .modal-content .modal-body {
    font-size: 16px;
    min-height: 150px;
  }

  .modal-dialog .modal-content form {
    font-size: 14px;
  }

  .modal-dialog .modal-content .modal-footer button.btn {
    display: block;
    width: 100%;
    padding: 10px 16px;
    font-size: 18px;
    line-height: 1.3333333;
    border-radius: 6px;
  }

  .modal-dialog .modal-content .modal-footer .btn+.btn {
    margin-top: 10px;
    margin-left: 0px;
  }

  .modal-dialog .modal-content .modal-footer button.btn.active.focus,
  .modal-dialog .modal-content .modal-footer button.btn.active:focus,
  .modal-dialog .modal-content .modal-footer button.btn.focus,
  .modal-dialog .modal-content .modal-footer button.btn:active.focus,
  .modal-dialog .modal-content .modal-footer button.btn:active:focus,
  .modal-dialog .modal-content .modal-footer button.btn:focus {
    outline: none;
  }

  button.close {
    opacity: 0.6;
  }
}

